--- a/Hardware und PC-Komponenten/style.css
+++ b/Hardware und PC-Komponenten/style.css
@@ -83,3 +83,7 @@
     box-shadow: 0 8px 30px rgba(0,0,0,0.08);
     border: 1px solid rgba(255,255,255,0.4);
 }
+
+.p-5.bg-light.rounded.shadow-lg.fade-in h1 {
+    
+}
